# ray-data-eval

./: .envrc  .gitignore  requirements.txt  setup.py
.github/workflows/: format.yml  ruff.yml
config/: prometheus.yml
nanobenchmarks/: data_utils.py  gen.py  gen_flink.py  gen_spark.py  load.py  nonuniform.py  pipelining.py  setup_flink.sh  skew.py  spark_streaming_wordcount.py  uniform.py  uniform_flink.py  uniform_spark.py
nanobenchmarks/spark/: pom.xml
nanobenchmarks/tfdata/: example.py  uniform.py
ray_data_eval/batch_inference/: ray_data_resnet_batch_inference
ray_data_eval/common/: logger.py  pipeline.py  types.py
ray_data_eval/flink/: image_inference.py
ray_data_eval/image_generation/: _image_gen_tput.ipynb  common.py  path2prompt.csv  requirements.txt
ray_data_eval/image_inference/: image_inference.ipynb  image_inference_plots.ipynb  run.py  test_map_batches.py
ray_data_eval/image_training/: create_sample_dataset.py  image_loader_microbenchmark.py  output.csv  preprocess_images.py  requirements.txt  sampling.py
ray_data_eval/infra/: ansible_utils.py  cls.py  shell_utils.py  terraform_utils.py  yarn_utils.py
ray_data_eval/libsolver/: Cargo.toml  README.md  pyproject.toml  test.py  timeline_to_trace.py
ray_data_eval/libsolver/src/: lib.rs  main.rs  solver.rs  types.rs
ray_data_eval/libsolver/src/solver/: environment.rs  mod.rs
ray_data_eval/microbenchmarks/: launch.sh  launch_ray_no_partition.sh  launch_ray_sen.sh  plot.py  plot_heatmap.py  setting.py
solver/: solver.py  solver_tests.py
video_inference/: video_inference.py
(+227 files in other folders)
