[package]
name = "libsolver"
version = "0.1.0"
edition = "2021"

[lib]
name = "libsolver"
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.2"
itertools = "0.12.1"
log = "0.4.20"
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
