[package]
name = "libsolver"
version = "0.1.0"
edition = "2021"

[lib]
name = "libsolver"
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
arrayvec = "0.7.4"
env_logger = "0.11.2"
itertools = "0.12.1"
log = "0.4.20"
once_cell = "1.12"
pyo3 = { version = "0.19", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
